--- a/list.html
+++ b/list.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-  <head>
-    <meta charset="utf-8">                                                   <!--set the character set for the document-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   <!--used by mobile devices, to ensure that the page renders at the width of viewport, there’s a 1:1 ratio between the device width and the viewport size-->
+
+<head>
+    <meta charset="utf-8"> <!--set the character set for the document-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--used by mobile devices, to ensure that the page renders at the width of viewport, there’s a 1:1 ratio between the device width and the viewport size-->
 
     <title>Team Members List</title>
     <meta name="author" content="Doha Hmeid">
-    <meta name="description" content="List of team members that provides the capability of adding team members to the list and searching through them.">
+    <meta name="description"
+        content="List of team members that provides the capability of adding team members to the list and searching through them.">
     <meta name="keywords" content="list, team members, addition, searching">
 
-    <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" type="text/css" href="css/list.css">
     <link rel="icon" type="image/x-icon" sizes="16x16 32x32 48x48" href="list.ico">
-  </head>
+</head>
 
-  
-  <body>
-        <h1>hello world</h1>
-  </body>
+
+<body>
+    <header>
+        <h1>Add members to Front-end development team</h1>
+    </header>
+
+    <!-- note: tabindex attributes input's order in the keyboard navigation sequence -->
+    <form id="membersForm" method="GET">
+
+        <div>
+            <input type="search" id="search" class="search" name="search" tabindex="1" aria-label="search for a member"
+                placeholder="Find members..." onkeypress="searchForm()">
+        </div>
+
+        <fieldset>
+            <legend>Options:</legend>
+            <ul>
+                <li>
+                    <input type="checkbox" id="member1" class="member1" name="member1" value="Carolien Bloeme"
+                        tabindex="2">
+                    <label for="member1">Carolien Bloeme</label>
+                </li>
+
+                <li>
+                    <input type="checkbox" id="member2" class="member2" name="member2" value="Sun Jun" tabindex="3">
+                    <label for="member2">Sun Jun</label>
+                </li>
+
+                <li>
+                    <input type="checkbox" id="member3" class="member3" name="member3" value="Song Bao" tabindex="4">
+                    <label for="member3">Song Bao</label>
+                </li>
+
+                <li>
+                    <input type="checkbox" id="member4" class="member4" name="member4" value="Olivia Arribas"
+                        tabindex="5">
+                    <label for="member4">Olivia Arribas</label>
+                </li>
+            </ul>
+        </fieldset>
+
+        <div>
+            <button type="button" class="cancel" tabindex="6" onclick="cancelForm()">Cancel</button>
+            <button type="submit" class="save" tabindex="7" onclick="saveForm()">SAVE</button>
+        </div>
+
+    </form>
+
+
+    <!-- essential javascript codes to provide form functionality, note:functions are not complete yet -->
+    <script>
+        //function to handle search queries 
+        function searchForm() {
+            document.getElementById("search").nodeValue;
+        }
+
+        // Function to handle form cancellation
+        function cancelForm() {
+            document.getElementById("membersForm").reset();
+        }
+
+        // Function to handle form saving
+        function saveForm() {
+        }
+    </script>
+
+</body>
 
 </html>
