--- a/list.html
+++ b/list.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8"> <!--set the character set for the document-->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--used by mobile devices, to ensure that the page renders at the width of viewport, there’s a 1:1 ratio between the device width and the viewport size-->
-
     <title>Team Members List</title>
     <meta name="author" content="Doha Hmeid">
     <meta name="description"
@@ -14,59 +12,83 @@
 
     <link rel="stylesheet" type="text/css" href="css/list.css">
     <link rel="icon" type="image/x-icon" sizes="16x16 32x32 48x48" href="list.ico">
+    <!--including font awesome v4 icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 
 <body>
     <header>
         <h1>Add members to Front-end development team</h1>
     </header>
 
-    <!-- note: tabindex attributes input's order in the keyboard navigation sequence -->
     <form id="membersForm" method="GET">
-
-        <div>
-            <input type="search" id="search" class="search" name="search" tabindex="1" aria-label="search for a member"
-                placeholder="Find members..." onkeypress="searchForm()">
+        <div class="search-container">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="search" id="search" class="search" name="search" aria-label="search for a member"
+                placeholder="Find members..." tabindex="1" onkeypress="searchForm()">
         </div>
 
-        <fieldset>
+        <fieldset class="checkboxes-container">
             <legend>Options:</legend>
             <ul>
                 <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <label for="member1">Carolien Bloeme</label>
                     <input type="checkbox" id="member1" class="member1" name="member1" value="Carolien Bloeme"
                         tabindex="2">
-                    <label for="member1">Carolien Bloeme</label>
                 </li>
 
                 <li>
-                    <input type="checkbox" id="member2" class="member2" name="member2" value="Sun Jun" tabindex="3">
+                    <i class="fa fa-user" aria-hidden="true"></i>
                     <label for="member2">Sun Jun</label>
+                    <input type="checkbox" id="member2" class="member2" name="member2" value="Sun Jun" tabindex="3">
                 </li>
 
                 <li>
-                    <input type="checkbox" id="member3" class="member3" name="member3" value="Song Bao" tabindex="4">
+                    <i class="fa fa-user" aria-hidden="true"></i>
                     <label for="member3">Song Bao</label>
+                    <input type="checkbox" id="member3" class="member3" name="member3" value="Song Bao" tabindex="4">
                 </li>
 
                 <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <label for="member4">Olivia Arribas</label>
                     <input type="checkbox" id="member4" class="member4" name="member4" value="Olivia Arribas"
                         tabindex="5">
-                    <label for="member4">Olivia Arribas</label>
+                </li>
+
+                <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <label for="member5">Bonginkosi Mdladlana</label>
+                    <input type="checkbox" id="member5" class="member5" name="member5" value="Bonginkosi Mdladlana"
+                        tabindex="6">
+                </li>
+
+                <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <label for="member6">Arina Belomestnykh</label>
+                    <input type="checkbox" id="member6" class="member6" name="member6" value="Arina Belomestnykh"
+                        tabindex="7">
+                </li>
+
+                <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <label for="member7">Jaqueline Likoki</label>
+                    <input type="checkbox" id="member7" class="member7" name="member7" value="Jaqueline Likoki"
+                        tabindex="8">
                 </li>
             </ul>
         </fieldset>
 
-        <div>
-            <button type="button" class="cancel" tabindex="6" onclick="cancelForm()">Cancel</button>
-            <button type="submit" class="save" tabindex="7" onclick="saveForm()">SAVE</button>
+        <div class="buttons-container">
+            <button type="button" class="cancel" tabindex="9" onclick="cancelForm()">Cancel</button>
+            <button type="submit" class="save" tabindex="10" onclick="saveForm()">SAVE</button>
         </div>
-
     </form>
-
 
     <!-- essential javascript codes to provide form functionality, note:functions are not complete yet -->
     <script>
+    
         //function to handle search queries 
         function searchForm() {
             document.getElementById("search").nodeValue;
@@ -81,7 +103,6 @@
         function saveForm() {
         }
     </script>
-
 </body>
 
 </html>
