fixing pull request issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="List of team members that provides the capability of adding team members to the list and searching through them.">
     <meta name="keywords" content="list, team members, addition, searching">
 
-    <link rel="stylesheet" type="text/css" href="css/list.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" type="image/x-icon" sizes="16x16 32x32 48x48" href="list.ico">
     <!--including font awesome v4 icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -86,9 +86,7 @@
         </div>
     </form>
 
-    <!-- essential javascript codes to provide form functionality, note:functions are not complete yet -->
     <script>
-
         //change the label+icon color to black when checkbox is selected 
         const checkboxes = document.querySelectorAll('input[type="checkbox"]');
         checkboxes.forEach(checkbox => {
